--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "Roman Zateev",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.1.2",
     "nodemon": "^2.0.15"
   }
