--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "Roman Zateev",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.2",
+    "node-cron": "^3.0.0",
     "nodemon": "^2.0.15"
   }
 }
